[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sam", email = "anothercat1259@gmail.com"},
]
dependencies = [
    "arcade~=2.4",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
